<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_main_black_24dp"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_hall"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/title_hall" />

    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/ic_devices_other_black_24dp"
        android:title="@string/title_task" />

    <item
        android:id="@+id/navigation_memo"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_memo" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_personal_black_24dp"
        android:title="@string/title_personal" />
</menu>
