<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/w_8"
            android:layout_marginStart="@dimen/w_8"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEnterprise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:background="@drawable/bg_et"
                android:drawablePadding="@dimen/w_4"
                android:drawableStart="@drawable/ic_domain_black_24dp"
                android:gravity="center_vertical"
                android:hint="@string/register_enterprise"
                android:maxLength="25" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:background="@drawable/bg_et"
                android:drawablePadding="@dimen/w_4"
                android:drawableStart="@drawable/ic_user_24dp"
                android:gravity="center_vertical"
                android:hint="@string/register_username"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:background="@drawable/bg_et"
                android:digits="@string/ruleMail"
                android:drawablePadding="@dimen/w_4"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:gravity="center_vertical"
                android:hint="@string/register_mail"
                android:inputType="textEmailAddress"
                android:maxLength="45" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:checkedButton="@+id/rbMale"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/w_4"
                    android:drawableStart="@drawable/ic_man"
                    android:text="@string/personal_gender_man" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/w_16"
                    android:drawablePadding="@dimen/w_4"
                    android:drawableStart="@drawable/ic_woman"
                    android:text="@string/personal_gender_woman" />
            </RadioGroup>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:background="@drawable/bg_et"
                android:digits="@string/ruleAZaz09"
                android:drawablePadding="@dimen/w_4"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:gravity="center_vertical"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:maxLength="24" />

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:background="@drawable/bg_et"
                android:digits="@string/ruleAZaz09"
                android:drawablePadding="@dimen/w_4"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:gravity="center_vertical"
                android:hint="@string/register_password2"
                android:inputType="textPassword"
                android:maxLength="24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16">

                <CheckBox
                    android:id="@+id/cbAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/register_agree" />

                <TextView
                    android:id="@+id/tvAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_agreement" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_16"
                android:background="@drawable/bg_btn_blue_selector_login"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>